Fix issues on mobile version

--- a/Styles/Blocks/_health.scss
+++ b/Styles/Blocks/_health.scss
@@ -21,7 +21,8 @@
 
         @include mobile {
             margin-top: 20px;
-            padding-inline: 15px;
+            padding-left: none;
+            padding-right: none;
         }
     }
 
